# roboy_NRP_deep_rl

./: README.md  model.sdf
gazebo_ros_muscle_interface/: CMakeLists.txt  README.txt  package.xml  sendactivation.py
gazebo_ros_muscle_interface/include/: gazebo_ros_muscle_interface.h
gazebo_ros_muscle_interface/msg/: MuscleState.msg  MuscleStates.msg
gazebo_ros_muscle_interface/src/: gazebo_ros_muscle_interface.cpp
gazebo_ros_muscle_interface/srv/: GetMuscleActivations.srv  GetMuscleStates.srv  SetMuscleActivations.srv
myoarm_nst_rl/: Myo_NST.bibi  Myo_NST.exc  controller.py  ddpg_weights_actor.h5  ddpg_weights_critic.h5  holodeck.3ds  init_DRLagent.py  rqt_plot.py
